--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   gradient_text: ^1.0.2
   firebase_auth: ^0.16.1
   provider: ^4.3.1
+  flutter_staggered_grid_view: ^0.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
